--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-validator": "^6.13.0",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
+    "mariadb": "^2.5.5",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.12.0-alpha.1"
