--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "monitor":  "npx nodemon"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -22,5 +23,8 @@
     "passport-local": "^1.0.0",
     "sequelize": "^6.12.0-alpha.1",
     "start": "^5.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
