--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "monitor":  "npx nodemon"
+    "monitor": "npx nodemon"
   },
   "dependencies": {
+    "async": "^3.2.2",
     "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
